<resources>
    <string name="app_name">Avengers</string>
    <string name="next">Next</string>
    <string name="create_account">Create account</string>
    <string name="forgot_email">forgot email?</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="with_your_google_account">with your Google Account</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register_with_us">Register With Us.</string>
    <string name="tony_shark">Tony Shark</string>
    <string name="tony_shark_com">tony@avengers.com</string>
    <string name="hulk">Hulk</string>
    <string name="hulk_avengers_com">hulk@avengers.com</string>
    <string name="captain_america">Captain America</string>
    <string name="captain_avengers_com">captain@avengers.com</string>
    <string name="thor">Thor</string>
    <string name="thor_avengers_com">thor@avengers.com</string>
    <string name="widow">Widow</string>
    <string name="widow_avengers_com">widow@avengers.com</string>
    <string name="preferences_file_name">Avengers Preferences</string>
    <string name="logout">Logout</string>
    <string name="did_you_forgot_your_password">Did You Forgot Your Password?</string>
    <string name="don_t_worry_just_enter_your_mobile_number">Don\'t worry! Just Enter your mobile number</string>
    <string name="submit">Submit</string>
    <string name="register_here">Register Here!</string>
    <string name="enter_your_information">Enter your Information</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>
