<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
    <ImageView
            android:layout_width="match_parent"
            android:id="@+id/imgGoogle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/google"
            android:layout_marginTop="80dp"
            android:layout_height="120dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:layout_below="@+id/imgGoogle"
            android:textSize="40dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/txtSignIn"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSubheader"
            android:layout_below="@+id/txtSignIn"
            android:layout_centerHorizontal="true"
            android:text="@string/with_your_google_account"
            android:textColor="#000000"
            android:textSize="20dp"/>
    <EditText
            android:hint="@string/email_or_mobile_number"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_below="@+id/txtSubheader"
            android:padding="5dp"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:text="@string/forgot_email"
            android:textSize="15sp"
            android:textColor="@color/Light_blue"
            android:layout_below="@+id/etEmail"
            android:padding="5dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="#ffff"
            android:text="@string/create_account"
            android:textSize="21sp"
            android:layout_alignParentBottom="true"
            android:id="@+id/txtCreateAccount"
            android:textColor="@color/Light_blue" android:layout_alignParentStart="true" android:layout_marginTop="13dp"
            android:layout_marginBottom="19dp" android:layout_marginStart="13dp"/>
    <Button
            android:text="@string/next"
            android:textColor="#ffff"
            android:background="@color/facebook"
            android:layout_toEndOf="@+id/txtCreateAccount"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="7dp"/>
</RelativeLayout>