<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <TextView
            android:id="@+id/txtNewHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_information"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNewHere"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:backgroundTint="@color/colorPrimary"/>
    <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/etName"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"/>
    <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/etNumber"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/etNewPassword"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"/>
    <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
</RelativeLayout>