<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <TextView
            android:id="@+id/txtDidYouForgotYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_you_forgot_your_password"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:id="@+id/txtDontWorry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_worry_just_enter_your_mobile_number"
            android:layout_below="@+id/txtDidYouForgotYourPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"/>
    <EditText
            android:id="@+id/etEnterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDontWorry"
            android:hint="@string/phone_number"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="phone"
            android:backgroundTint="@color/colorPrimary"/>
    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:textStyle="bold"/>
</RelativeLayout>