<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".LoginActivity"
                android:orientation="vertical">
    <ImageView
            android:id="@+id/imgAvengers"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/avengers_logo"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"/>
    <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAvengers"
            android:hint="@string/phone_number"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            />
    <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPhone"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_below="@+id/etPassword"/>
    <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/btnLogin"
            android:clickable="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_with_us"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:id="@+id/txtRegister"/>
</RelativeLayout>