<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/imgTonyShark"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/tony_stark"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:id="@+id/txtTonyShark"
                    android:text="@string/tony_shark"
                    android:layout_toRightOf="@+id/imgTonyShark"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtTonyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgTonyShark"
                    android:layout_below="@id/txtTonyShark"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="9111222232"/>
            <TextView
                    android:id="@+id/txtTonyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgTonyShark"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_below="@+id/txtTonyPhone"
                    android:text="@string/tony_shark_com"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentStart="true">
            <ImageView
                    android:id="@+id/imgHulk"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/hulk"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:id="@+id/txtHulk"
                    android:text="@string/hulk"
                    android:layout_toRightOf="@+id/imgHulk"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtHulkPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgHulk"
                    android:layout_below="@id/txtHulk"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="7332217564"/>
            <TextView
                    android:id="@+id/txtHulkEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgHulk"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_below="@+id/txtHulkPhone"
                    android:text="@string/hulk_avengers_com"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/imgCaptainAmerica"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/captain_america"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:id="@+id/txtCaptainAmerica"
                    android:text="@string/captain_america"
                    android:layout_toRightOf="@+id/imgCaptainAmerica"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtCaptainPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgCaptainAmerica"
                    android:layout_below="@id/txtCaptainAmerica"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="7332900763"/>
            <TextView
                    android:id="@+id/txtCaptainEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgCaptainAmerica"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_below="@+id/txtCaptainPhone"
                    android:text="@string/captain_avengers_com"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/imgThor"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/thor"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:id="@+id/txtThor"
                    android:text="@string/thor"
                    android:layout_toRightOf="@+id/imgThor"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtThorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgThor"
                    android:layout_below="@id/txtThor"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="7321655564"/>
            <TextView
                    android:id="@+id/txtThorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgThor"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_below="@+id/txtThorPhone"
                    android:text="@string/thor_avengers_com"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/imgWidow"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/widow"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:id="@+id/txtWidow"
                    android:text="@string/widow"
                    android:layout_toRightOf="@+id/imgWidow"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtWidowPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgWidow"
                    android:layout_below="@id/txtWidow"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="9000337564"/>
            <TextView
                    android:id="@+id/txtWidowEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgWidow"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_below="@+id/txtWidowPhone"
                    android:text="@string/widow_avengers_com"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>